# mcp-beeper-texts

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
llms/: beeper-texts-schema.md  mcp-full-docs.md
src/mcp_beeper_texts/: __init__.py  db.py  models.py  queries.py  server.py
tests/: conftest.py  test_db.py  test_queries_unit.py  test_server_dummy_integration.py
